# Kalshi-Arbitrage-Dashboard

./: .env  .gitignore  AGENTS.md  AUTO_BID_EDGE_ANALYSIS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MARKET_MATCHING.md  PRIORITY_1_IMPLEMENTATION.md  PRIORITY_2_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  RISK_MANAGEMENT.md  STRATEGY_ALIGNMENT_REVIEW.md  WEBSOCKET_ANALYSIS.md  current_js.js  nixpacks.toml  railway.json  strategy.md  vercel.json  verify_palette_changes.py  vite_log.txt
.Jules/: palette.md
.claude/: settings.local.json
.jules/: alpha.md  bernie.md  bolt.md  palette.md  sentinel.md
kalshi-arb/: .env.example  Cargo.toml  NCAAB_DATA_FLOW_ANALYSIS.md  config.toml
kalshi-arb/docs/plans/: 2026-01-30-fix-stale-kalshi-prices-design.md  2026-01-31-college-basketball-model-plan.md  2026-02-03-critical-gaps-live-trading.md
kalshi-arb/src/: config.rs  diagnostic.rs  lib.rs  main.rs  pipeline.rs
kalshi-arb/src/engine/: fees.rs  fill_simulator.rs  kelly.rs  matcher.rs  mod.rs  momentum.rs  pending_orders.rs  positions.rs  risk.rs  strategy.rs  win_prob.rs
kalshi-arb/src/execution/: executor.rs  mod.rs
kalshi-arb/src/feed/: draftkings.rs  mod.rs  odds_api_io.rs  score_feed.rs  scraped.rs  the_odds_api.rs  types.rs
kalshi-arb/src/kalshi/: auth.rs  mod.rs  rest.rs  types.rs  ws.rs
kalshi-arb/src/tui/: config_view.rs  mod.rs  render.rs  state.rs
kalshi-arb/tests/: critical_safety_flow.rs  diagnostic_multi_source.rs  integration_safety.rs
kalshi-dashboard/: .env.example  .eslintrc.cjs  .gitignore  TESTING.md  generate_hash.cjs  index.html  proxy.js  (+10 more)
(+181 files in other folders)
